# aspect-ratio-calculator-wx

./: CMakeLists.txt  README.md
src/: base.cpp
src/includes/: base.h
